Added basic react test
React test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <!-- Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Main game files -->
+  <script src="/ahem.js"></script>
 <!-- End of packages -->
 
 <!--Production-ready version of React
