--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
   <!-- Load Packages -->
     <!-- React.js-->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+    <!-- Load React API -->
+    <script src= "https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <!-- Load React DOM-->
+    <script src= "https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <!-- Load Babel Compiler -->
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- Main game files -->
-    <script src="ahem.jsx"></script>
   <!-- End of packages -->
 </head>
 
@@ -21,5 +22,6 @@
 <html>
   <body>
     <div id="root"></div>
+    <script src="ahem.js"></script>
   </body>
 </html>
