--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <!-- React.js-->
     <!-- Load React API -->
     <script src= "https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <!-- Load React DOM-->
     <script src= "https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-    <!-- Load Babel Compiler -->
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -22,6 +20,6 @@
 <html>
   <body>
     <div id="root"></div>
-    <script src="ahem.js"></script>
+    <script src="ahem.jsx" type="text/babel"></script>
   </body>
 </html>
