--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <!-- Load Packages -->
     <!-- React.js-->
     <!-- Load React API -->
-    <script src= "https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script src= "https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <!-- Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- End of packages -->
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" >
+  <!-- End of CSS -->
 </head>
 
 
