--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <!-- End of packages -->
-
+    <script src="global.js" type="text/javascript"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" >
   <!-- End of CSS -->
