--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+
+    <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!-- End of packages -->
     <script src="global.js" type="text/javascript"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" >
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <!-- End of CSS -->
 </head>
 
